rake-runner-test/testData/plugins/rakeRunner/app_rspec/spec/statistics/compile_error/error2_spec.rb
# @author: Roman Chernyatchik
require "rspec"

describe "Compilation" do

  # Called before each example.
  before(:each) do
    $
  end

  # Called after each example.
  after(:each) do
    # Do nothing
  end

  it "should fail in before" do
    expect(true).to eq(true)
  end
  end
end